start app bar and make app bar multi comp
