# backend/docs/swagger.json
@@ -431,6 +431,7 @@
             "required": [
                 "id",
                 "is_admin",
+                "is_super_admin",
                 "last_login",
                 "permission",
                 "uid",
@@ -444,6 +445,9 @@
                     "type": "integer"
                 },
                 "is_admin": {
+                    "type": "boolean"
+                },
+                "is_super_admin": {
                     "type": "boolean"
                 },
                 "last_login": {
