# backend/internal/models/admin.go
@@ -19,17 +19,18 @@ type Permission struct {
 }
 
 type User struct {
-	ID          uint       `json:"id" gorm:"primaryKey;autoIncrement" validate:"required"`
-	UID         string     `json:"uid" gorm:"type:varchar(26);not null;unique" validate:"required"`
-	Username    string     `json:"username" gorm:"type:varchar(16);not null;unique"  validate:"required"`
-	Password    string     `json:"-" gorm:"type:varchar(64); not null"`
-	IsAdmin     bool       `json:"is_admin" gorm:"type:bool;default(false)"  validate:"required"`
-	Salt        string     `json:"-" gorm:"type:varchar(8);not null"`
-	LastLogin   *time.Time `json:"last_login"  validate:"required"`
-	CreatedAt   time.Time
-	UpdatedAt   time.Time
-	Token       []UserToken `json:"-"`
-	Permissions *Permission `json:"permission" gorm:"type:jsonb"  validate:"required"`
+	ID           uint       `json:"id" gorm:"primaryKey;autoIncrement" validate:"required"`
+	UID          string     `json:"uid" gorm:"type:varchar(26);not null;unique" validate:"required"`
+	Username     string     `json:"username" gorm:"type:varchar(16);not null;unique"  validate:"required"`
+	Password     string     `json:"-" gorm:"type:varchar(64); not null"`
+	IsAdmin      bool       `json:"is_admin" gorm:"type:bool;default(false)"  validate:"required"`
+	IsSuperAdmin bool       `json:"is_super_admin" gorm:"type:bool;default(false)"  validate:"required"`
+	Salt         string     `json:"-" gorm:"type:varchar(8);not null"`
+	LastLogin    *time.Time `json:"last_login"  validate:"required"`
+	CreatedAt    time.Time
+	UpdatedAt    time.Time
+	Token        []UserToken `json:"-"`
+	Permissions  *Permission `json:"permission" gorm:"type:jsonb"  validate:"required"`
 }
 
 type UserToken struct {
@@ -55,6 +56,16 @@ func (p *Permission) Scan(value interface{}) error {
 }
 
 func (u *User) BeforeSave(tx *gorm.DB) (err error) {
+	if u.IsAdmin {
+		u.Permissions = &Permission{
+			OcUser:       true,
+			OcGroup:      true,
+			Statistic:    true,
+			Occtl:        true,
+			System:       true,
+			SeeServerLog: true,
+		}
+	}
 	if u.Permissions == nil {
 		u.Permissions = &Permission{
 			OcUser:       false,
